# Learn-Scikit-Learn

./: .gitignore  README.md  main.py  pyproject.toml
.agent/rules/: project.md
classify/: README.md  classify_cats_dogs.py  download_cat.py  download_dog.py  run_predict.py  run_training.py
classify_btc/: README.md  classify_btc.py
clustering_issues/: README.md  issue_clustering.py  issues.json
dimensionality_reduction/: README.md  issue_clustering.py  pca_issues.py  tsne_issues.py
regression/: README.md  backtest_btc.py  fetch_data.py  predict_btc.py
