[project]
name = "learn-scikit-learn"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "jieba>=0.42.1",
    "numpy>=2.4.1",
    "opencv-python>=4.13.0.90",
    "pillow>=12.1.0",
    "scikit-image>=0.26.0",
    "scikit-learn>=1.8.0",
    "ccxt>=4.4.45",
    "pandas>=2.2.3",
]
